perf(log): stop copying the whole request log on every request
RequestLog stored requests in a CopyOnWriteArrayList. That is the wrong
shape for this data: the log is written once per request and read once at
the end of the test, so every recorded request copied the entire backing
array. A test firing a few thousand requests paid O(n^2) array copies to
build a list nothing had read yet - poor for a library that sells itself
on speed.

It is now a plain list guarded by the monitor. Reads take a snapshot via
List.copyOf, which keeps the documented promise that iteration is not
disturbed by requests still arriving; last() went through the raw list
and now takes the snapshot too.